--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -9,6 +9,7 @@ provider:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
     CALENDAR_ID: ${file(config.json):CALENDAR_ID}
+
 functions:
   getAuthURL:
     handler: handler.getAuthURL
@@ -22,10 +23,16 @@ functions:
       - http:
           path: api/token/{code}
           method: get
-
   getCalendarEvents:
     handler: handler.getCalendarEvents
     events:
       - http:
           path: api/get-calendar-events/{access_token}
           method: get
+
+resources:
+  Resources:
+    ApiGatewayRestApi:
+      Type: AWS::ApiGateway::RestApi
+      Properties:
+        Name: my-auth-service-api
