--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -9,12 +9,6 @@ provider:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
     CALENDAR_ID: ${file(config.json):CALENDAR_ID}
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - "dynamodb:PutItem"
-        - "dynamodb:GetItem"
-      Resource: "arn:aws:dynamodb:us-west-2:your-account-id:table/your-table-name"
 
 functions:
   getAuthURL:
@@ -33,10 +27,10 @@ functions:
           method: get
           cors: true
 
-  getCalendarEvents:
-    handler: handler.getCalendarEvents
-    events:
-      - http:
-          path: api/get-calendar-events/{access_token}
-          method: get
-          cors: true
+getCalendarEvents:
+  handler: handler.getCalendarEvents
+  events:
+    - http:
+        path: api/get-events/{access_token}
+        method: get
+        cors: true
