tests written and passed for features 2 and 3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
   "git.ignoreLimitWarning": true,
-  "cSpell.words": ["onclick"]
+  "cSpell.words": [
+    "eahs",
+    "ghkhrvkld",
+    "hogu",
+    "listitem",
+    "nmmtpqlct",
+    "onclick",
+    "testid",
+    "textbox",
+    "uscq"
+  ]
 }
