--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.5.2",
     "googleapis": "^144.0.0",
     "prop-types": "^15.8.1",
+    "puppeteer": "^23.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -50,7 +51,6 @@
   ],
   "devDependencies": {
     "gh-pages": "^6.2.0",
-    "jest-cucumber": "^4.5.0",
-    "puppeteer": "^23.8.0"
+    "jest-cucumber": "^4.5.0"
   }
 }
