--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "listitem",
     "newurl",
     "nmmtpqlct",
+    "noreferrer",
     "onclick",
+    "spinbutton",
     "testid",
     "textbox",
     "uscq"
