--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "homepage": "https://Nandy1329.github.io/Meet",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "googleapis": "^144.0.0",
     "prop-types": "^15.8.1",
-    "puppeteer": "^23.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -50,7 +47,11 @@
     "last 1 safari version"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "gh-pages": "^6.2.0",
-    "jest-cucumber": "^4.5.0"
+    "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
+    "puppeteer": "^23.10.3"
   }
 }
