--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Nandy1329.github.io/Meet",
+  "homepage": "https://username.github.io/repository",
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "googleapis": "^144.0.0",
@@ -24,13 +24,19 @@
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "gh-pages": "^4.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -45,13 +51,5 @@
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version"
-  ],
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "gh-pages": "^6.2.0",
-    "jest": "^29.7.0",
-    "jest-cucumber": "^4.5.0",
-    "puppeteer": "^23.10.3"
-  }
+  ]
 }
