--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://username.github.io/repository",
+  "homepage": "https://nandy1329.github.io/Meet",
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "googleapis": "^144.0.0",
