--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://nandy1329.github.io/Meet",
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
+    "atatus-spa": "^4.6.4",
     "googleapis": "^144.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -27,7 +28,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "puppeteer": "^23.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
