--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,27 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Meet App",
+  "name": "Meet App",
   "icons": [
     {
       "src": "favicon.ico",
-      "type": "image/x-icon",
       "sizes": "48x48",
+      "type": "image/x-icon",
       "purpose": "maskable"
     },
     {
-      "src": "meet-app-144.png",
+      "src": "meet_logo_144x144.png",
       "type": "image/png",
       "sizes": "144x144",
       "purpose": "any"
     },
     {
-      "src": "meet-app-192.png",
+      "src": "meet_logo_192x192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "maskable"
     },
     {
-      "src": "meet-app-512.png",
+      "src": "meet_logo_512x512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
@@ -30,5 +30,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#affc41"
 }
