--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^14.5.2",
     "atatus-spa": "^4.6.4",
     "googleapis": "^144.0.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
