--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nandy1329.github.io/Meet",
+  "homepage": "https://nandy1329.github.io/MEET/",
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "atatus-spa": "^4.6.4",
