--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nandy1329.github.io/Meet",
+  "homepage": "https://nandy1329.github.io/MEET/",
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "atatus-spa": "^4.6.4",
     "googleapis": "^144.0.0",
+    "node": "^18.20.6",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -56,5 +57,8 @@
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version"
-  ]
+  ],
+  "engines": {
+    "node": "14.x"
+  }
 }
