--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
     "vite-plugin-pwa": "^0.21.1",
     "web-vitals": "^2.1.4",
@@ -33,7 +32,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "gh-pages": "^6.3.0",
-    "puppeteer": "^23.11.1"
+    "puppeteer": "^23.11.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
