--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,10 @@
     "env": {
       "NODE_VERSION": "22.x"
     }
+  },
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs22.x"
+    }
   }
 }
