--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "dev": "react-scripts start"
+    "dev": "react-scripts start",
+    "vercel-build": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
